--- a/akshnav.csproj
+++ b/akshnav.csproj
@@ -7,6 +7,7 @@
     <OutputType>WinExe</OutputType>
     <AssemblyName>MCenters</AssemblyName>
     <ApplicationVersion>1.0.0.2</ApplicationVersion>
+    <LangVersion>12.0</LangVersion>
     <OutputType>exe</OutputType> <!-- TODO: Check if this is correct -->
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
