--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -25,7 +25,10 @@ jobs:
     - name: Setup MSBuild.exe
       uses: microsoft/setup-msbuild@v2
 
-    - name: Compile app
-      run: |
-        msbuild /t:restore
-        dotnet build
+    #- name: Compile app
+    #  run: |
+    #    msbuild /t:restore
+    #    dotnet build
+      
+    - name: Build solution
+      run: msbuild -t:rebuild -property:Configuration=Release
